# helloworld

./: .gitignore  6.8_kernel_contribute_data.csv  LICENSE  LinuxKernel.csv  all_kernel_contribute_data.csv  all_kernel_contribute_data_20250112.csv  all_kernel_contribute_data_20250201.csv  all_kernel_contribute_data_20251225.csv  all_kernel_contribute_data_20260117.csv  all_kernel_contribute_data_20260614.csv  calculate_chinese_companies_per_year.py  calculate_vendor_contributions.py  chatgpt.ipynb  chinese_companies_per_year.html  chinese_companies_per_year.txt  email_domains_2025.csv  find_chinese_company_domains.py  find_linux_pr.py  generate_commit_wordcloud.py  generate_company_contribution_summary.py  generate_individual_wordclouds.py  generate_wordclouds_with_noto.py  helloworld.ipynb  kernel_contribution.py  kps_scraper.py  linux_kernel_contribution.py  linux_vendor_contributions_2025.csv  linuxkernel_9.csv  per-release-china-percent.txt  plot-chinese-companies-with-huawei.py  plot-chinese-companies.py  plot-developers-modified.py  plot-developers.py  pyproject.toml  update_companies.py
2025_company_commits/: Alibaba_linux_commits_2026-01-21.csv  Baidu_linux_commits_2026-01-21.csv  ByteDance_linux_commits_2026-01-21.csv  China_Mobile_linux_commits_2026-01-21.csv  China_Telecom_linux_commits_2026-01-21.csv  Huawei_linux_commits_2026-01-21.csv  Inspur_linux_commits_2026-01-21.csv  Kylin_Software_linux_commits_2026-01-21.csv  Lenovo_linux_commits_2026-01-21.csv  Loongson_linux_commits_2026-01-21.csv  NFSChina_linux_commits_2026-01-21.csv  (+7 more)
(+1 files in other folders)
